force-app/main/default/objects/TEST_Name__c/TEST_Name__c.object-meta.xml
<CustomObject>
    <label>TEST_Label</label>
    <nameField>
        <label>TEST_Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TESTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>