force-app/main/default/objects/TEST_Name__c/fields/Description_Name__c.field-meta.xml
<CustomField>
    <fullName>Description_Name__c</fullName>
    <label>Description_Label</label>
    <type>TextArea</type>
</CustomField>