force-app/main/default/objects/TEST_Name__c/fields/ForProg_label__c.field-meta.xml
<CustomField>
    <fullName>ForProg_label__c</fullName>
    <label>ForProg_label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>field</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>