force-app/main/default/objects/TEST_Name__c/fields/GlobalTestProg__c.field-meta.xml
<CustomField>
    <fullName>GlobalTestProg__c</fullName>
    <label>GlobalTestProg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalTest</valueSetName>
    </valueSet>
</CustomField>