force-app/main/default/objects/TEST_Name__c/fields/Prerequisites_Name__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites_Name__c</fullName>
    <label>Prerequisites_Label</label>
    <type>TextArea</type>
</CustomField>