force-app/main/default/objects/TEST_Name__c/fields/Priority_Name__c.field-meta.xml
<CustomField>
    <fullName>Priority_Name__c</fullName>
    <label>Priority_Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_BugPriority</valueSetName>
    </valueSet>
</CustomField>